chore: react-sbb-polarion usage
